# lcrr-tree

./: .gitignore  Cargo.toml  README.md  log.txt
proptest-regressions/tree/: proptest.txt
res/: dbg_vis.py
src/: lib.rs  mbr.rs  node.rs  tree.rs
src/tree/: mbr.rs  mod.rs  node.rs  obj_space.rs  proptest.rs  test.rs  tree_builder.rs  visitor.rs
src/tree/visitor/: dbg_vis.rs  mod.rs
tests/: rtree.rs
tests/res/: test_logger.rs
tests/res/cases/: 01-leaf-3obj-searchall.json  02-leaf-3obj-searchnone.json  03-leaf-3obj-search-1.json  04-leaf-3obj-search-2.json  05-3node-6obj-searchall.json  06-3node-6obj-searchnone.json  07-3node-6obj-resttolhs-searchhalf.json  08-3node-6obj-resttorhs-searchhalf.json  09-4node-9obj.json  10-7node.json
