[package]
name = "lcrr-tree"
version = "0.1.0"
authors = ["Daniel Shiposha <shipdan@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
petgraph = "0.5.1"
id-cache = { git = "https://github.com/MrShiposha/id-cache.git" }

[dev-dependencies.cargo-husky]
version = "1"
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]

[dev-dependencies.regex]
version = "1.3.9"

[dev-dependencies.rtree-test]
git = "https://github.com/MrShiposha/rtree-test.git"